--- a/asktoaske/templates/asktoaske/partial/style.html
+++ b/asktoaske/templates/asktoaske/partial/style.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% block styleindex %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/perfect-scrollbar/1.5.3/css/perfect-scrollbar.min.css">
 <link rel="stylesheet" href="{% static 'asktoaske/css/index.css' %}">
 <link rel="stylesheet" href="{% static 'asktoaske/css/chatbot.css' %}">
 {% endblock styleindex %}
