added azure database

--- a/asktoaske/templates/asktoaske/app/index.html
+++ b/asktoaske/templates/asktoaske/app/index.html
@@ -29,6 +29,8 @@
     document.getElementById('id_pdf_file').addEventListener('change', function(event) {
         if (event.target.files.length > 0) {
             document.getElementById('form-submitted-btn').click()
+            document.getElementById('loading-data').style.display="flex";
+            document.getElementById('uploading-file').style.display="none";
         }
     });
 </script>
