updated and final push

--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <br>
-    <h2>Large Language Models</h2>
+    <h2>GenAI LLM</h2>
     <hr style="margin: 0;"><br>
     <div class="row">
         <div class="col-md-6">
@@ -132,6 +132,7 @@
                                     <div class="tech-used">Gemini LLM</div>
                                     <div class="tech-used">Langchain</div>
                                     <div class="tech-used">Numpy</div>
+                                    <div class="tech-used">Gemini Embeddings</div>
                                     <div class="tech-used">Pandas</div>
                                 </p>
                             </div>
@@ -154,7 +155,8 @@
                                 <div>
                                     <span class="tech-used">Gemini LLM</span>
                                     <span class="tech-used">Langchain</span>
-                                    <span class="tech-used">ChromaDB</span>
+                                    <span class="tech-used">Pinecone</span>
+                                    <span class="tech-used">Hugging Face Embeddings</span>
                                     <span class="tech-used">RetrievalQA</span>
                                 </div>
                             </div>
