updated all again

--- a/diabetes/templates/diabetes/app/index.html
+++ b/diabetes/templates/diabetes/app/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col-md-7">
             <form method="post">
-                <label class="lebelfor_info">Input The Fields Asked</label>
+                <label class="lebelfor_info">Input The Fields Asked <span style="color: red;">( Warning!!! its a testing and raw work. )</span></label>
                 <hr style="margin-top: 0;">
                 {% csrf_token %}
                 <div class="row">
