--- a/whatsapp/templates/whatsapp/app/whatsapp.html
+++ b/whatsapp/templates/whatsapp/app/whatsapp.html
@@ -57,6 +57,7 @@
                         <label class="disabledthings" style="cursor: pointer;" for="phone"><i class="fas fa-phone"></i></label>
                     </div>
                     <span>CSV, JSON, TXT</span>
+                    <span><a style="font-size: 16px;color: #454545;" target="_blank" href="{% static 'whatsapp/data/sample.txt' %}" download="">Sample Data</a></span>
                 </div>
             </div>
         </div>
