--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -164,7 +164,32 @@
                     </div>
                 </div>
             </a>
-        </div>        
+        </div>  
+        <div class="col-md-6">
+            <a href="{% url 'sound_img_txt:index' %}" style="text-decoration: none;">
+                <div class="card mb-3" style="width: 100%;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img style="max-height: 200px;" src="{% static 'core/images/QA.png' %}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Word Sound Image</h5>
+                                <p class="card-text">Getting words from the sound and images related to those words with have graph like word filling space for the words!!</p>
+                                <div>
+                                    <span class="tech-used">Gemini LLM</span>
+                                    <span class="tech-used">Langchain</span>
+                                    <span class="tech-used">Dale-3</span>
+                                    <span class="tech-used">Open-Ai</span>
+                                    <span class="tech-used">LLM Chain</span>
+                                    <span class="tech-used">LLM Prompt</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>           
     </div>
 
     <br>
